--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -32,7 +32,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} Bitcoinがギャングアカウントに入金されます.この操作は取り消すことができません。",
+ 	 	 	 	 	"trans": "${amount} Bitcoinがギャングアカウントに入金されます. この操作は取り消すことができません.",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -242,7 +242,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "残高がないため引き出すことができません。",
+ 	 	 	 	"trans": "残高がないため引き出すことができません.",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -638,7 +638,7 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "これを行うと,アイテムのすべてのキャリブレーションがリセットされ,再度取引が可能になります。 \n       続行しますか？",
+ 	 	 	 	 	"trans": "これを行うと,アイテムのすべてのキャリブレーションがリセットされ,再度取引が可能になります. \n       続行しますか？",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
  	 	 	 	"trans": "装備の状態を初期化",
@@ -895,7 +895,7 @@
  	 	 	 	 	"eng": "Are you sure you want to leave this dungeon?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "今生成されているものと同一のダンジョンに入りなおすことはできません。",
+ 	 	 	 	 	"trans": "今生成されているものと同一のダンジョンに入りなおすことはできません.",
  	 	 	 	 	"eng": "You will not be able to enter this dungeon instance again"
  	 	 	 	}
  	 	 	}
@@ -926,11 +926,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "ビットコインを使って、同時に陳列できるアイテム数を増やすことができます。",
+ 	 	 	 	"trans": "ビットコインを使って、同時に陳列できるアイテム数を増やすことができます",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "マーケットにアクセスするにはレベル4以上になる必要があります。",
+ 	 	 	 	"trans": "マーケットにアクセスするにはレベル4以上になる必要があります",
  	 	 	 	"eng": "You need to be at least level 4 to access the market"
  	 	 	},
  	 	 	"levelSelect": {
@@ -1076,7 +1076,7 @@
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"content": {
- 	 	 	 	"trans": "ご質問がある場合は,公式のDiscordを介して直接Dexterに連絡してください。",
+ 	 	 	 	"trans": "ご質問がある場合は,公式のDiscordを介して直接Dexterに連絡してください.",
  	 	 	 	"eng": "If you have any questions please feel free to contact Dexter directly via official Discord (Link can be found in Floating Menu -> Links) or email to ching.huang.dexter@gmail.com"
  	 	 	}
  	 	},
@@ -1480,7 +1480,7 @@
  	 	 	 	"eng": "If you have a coupon from one of our events, you can claim it here."
  	 	 	},
  	 	 	"placeholder": {
- 	 	 	 	"trans": "クーポンコードをここに貼り付けるか,入力してください。",
+ 	 	 	 	"trans": "クーポンコードをここに貼り付けるか,入力してください",
  	 	 	 	"eng": "Paste or enter your coupon here"
  	 	 	},
  	 	 	"confirm": {
@@ -1769,7 +1769,7 @@
  	 	 	"deleteAccount": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "アカウントを削除してもよろしいですか？この操作は取り消すことができず,すべての情報が削除されます。",
+ 	 	 	 	 	 	"trans": "アカウントを削除してもよろしいですか？この操作は取り消すことができず,すべての情報が削除されます.",
  	 	 	 	 	 	"eng": "Are you sure you want to delete your account? This is irreversible, all account information will be removed."
  	 	 	 	 	}
  	 	 	 	}
@@ -1777,7 +1777,7 @@
  	 	},
  	 	"statsPage": {
  	 	 	"quitGang": {
- 	 	 	 	"trans": "辞めた",
+ 	 	 	 	"trans": "ギャングを抜ける",
  	 	 	 	"eng": "Quit Gang"
  	 	 	},
  	 	 	"logout": {
@@ -2455,7 +2455,7 @@
  	 	 	 	"eng": "Allies and Friends"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Cyber Code Onlineへようこそ. \r\n         オンライン上の人々と友達になっておけば,co-opクエストを手伝ってくれるでしょう. \r\n         分からないことがあったら、ぜひオンライン上の人々に聞いてくださいね:) \r\n         ただし、チャットで迷惑行為をはたらいた場合は、モデレータによってミュートされることを心に留めておいてください。",
+ 	 	 	 	"trans": "Cyber Code Onlineへようこそ. \r\n         オンライン上の人々と友達になっておけば,co-opクエストを手伝ってくれるでしょう. \r\n         分からないことがあったら、ぜひオンライン上の人々に聞いてくださいね:) \r\n         ただし、チャットで迷惑行為をはたらいた場合は、モデレータによってミュートされることを心に留めておいてください.",
  	 	 	 	"eng": "Welcome to CyberCode Online,\r\n        making friends with people online will be very useful for you to complete co-op quests,\r\n        go ahead ask people online if you have got any questions :)\r\n        Remember, if you spam in the chat, you will be muted by moderators."
  	 	 	}
  	 	},
@@ -2465,7 +2465,7 @@
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "キャッシュからクラフトするアイテムのレベルは,クラフトスキルによって決まる. \r\n         クラフトスキルのレベルを上げれば,より高いレベルのアイテムを作成できるということだ. \r\n        \r\n         [セントラルハブ]にある分子合成式3Dプリンタでキャッシュをプリントして,クラフトスキルをレベルアップさせよう.",
+ 	 	 	 	"trans": "キャッシュからクラフトするアイテムのレベルは,クラフトスキルによって決まります. \r\n         クラフトスキルのレベルを上げれば,より高いレベルのアイテムを作成できるということです. \r\n        \r\n         [セントラルハブ]にある分子合成式3Dプリンタでキャッシュをプリントして,クラフトスキルをレベルアップさせましょう.",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -3262,7 +3262,7 @@
  	 	 	 	"eng": "High Quality Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍で使用されている注射用ナノマシン. 戦闘中に怪我を治療することができる/",
+ 	 	 	 	"trans": "軍で使用されている注射用ナノマシン. 戦闘中に怪我を治療することができる.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -3382,7 +3382,7 @@
  	 	 	 	"eng": "Legendary Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す。",
+ 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3392,7 +3392,7 @@
  	 	 	 	"eng": "Epic Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す。",
+ 	 	 	 	"trans": "近くのプレーヤーを治療するために数千個もの次世代型ナノマシンを送り出す",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -3749,7 +3749,7 @@
  	 	 	 	"eng": "Mysterious Container"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "赤と緑の装飾が施され,側面に「Cybersanta™」のロゴがある暗号化されたコンテナ。",
+ 	 	 	 	"trans": "赤と緑の装飾が施され,側面に「Cybersanta™」のロゴがある暗号化されたコンテナ.",
  	 	 	 	"eng": "An encrypted container with red, green decoration and a 'CyberSanta™' logo on the side of it."
  	 	 	}
  	 	},
@@ -5218,7 +5218,7 @@
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "GitHubページで設定ファイルを編集することで,このようなコンテンツにも貢献できます。",
+ 	 	 	 	"trans": "GitHubページで設定ファイルを編集することで,このようなコンテンツにも貢献できます.",
  	 	 	 	"eng": "You can contribute to content like this and many more too by editing the config files in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
@@ -5310,7 +5310,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "おめでとうございます！${levelName}にアップしました！",
+ 	 	 	 	"trans": "おめでとうございます！${levelName}が上がりました！",
  	 	 	 	"eng": "Congratulation, you have leveled up your ${levelName}!"
  	 	 	},
  	 	 	"fromTo": {
@@ -5333,7 +5333,7 @@
  	 	 	},
  	 	 	"badReview": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "申し訳ありませんが,改善できる点を教えてください。",
+ 	 	 	 	 	"trans": "申し訳ありませんが,改善できる点を教えてください",
  	 	 	 	 	"eng": "I am so sorry, please let me know where I can improve"
  	 	 	 	}
  	 	 	},
@@ -5397,7 +5397,7 @@
  	},
  	"dungeonList": {
  	 	"newbieTip": {
- 	 	 	"trans": "ダンジョンでは戦闘の後に回復されません.回復アイテムを使うことを忘れずに.",
+ 	 	 	"trans": "ダンジョンでは戦闘の後に回復されません. 回復アイテムを使うことを忘れずに.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
  	 	}
  	},
