--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -5303,11 +5303,11 @@
  	 	 	"eng": "Legendary"
  	 	},
  	 	"donation5": {
- 	 	 	"trans": "Кибернетический картофель",
+ 	 	 	"trans": "КиберКартофель",
  	 	 	"eng": "Cybernetic Potato"
  	 	},
  	 	"donation6": {
- 	 	 	"trans": "Престиж",
+ 	 	 	"trans": "Престижный",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
@@ -5315,7 +5315,7 @@
  	 	 	"eng": "Moderator"
  	 	},
  	 	"admin": {
- 	 	 	"trans": "Админ",
+ 	 	 	"trans": "Администратор",
  	 	 	"eng": "Admin"
  	 	}
  	}
