--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -225,11 +225,11 @@
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "Combien vaoudrais-tu mettre dans le coffre-fort ?",
+ 	 	 	 	 	"trans": "Combien veux-tu en mettre dans le coffre-fort ?",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "Combien voudrais-tu retirer de la banque ?",
+ 	 	 	 	 	"trans": "Combien veux-tu en retirer de la banque ?",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
