--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -4862,7 +4862,7 @@
  	 	},
  	 	"rare": {
  	 	 	"name": {
- 	 	 	 	"trans": "peu fréquent",
+ 	 	 	 	"trans": "rare",
  	 	 	 	"eng": "rare"
  	 	 	}
  	 	},
