--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -3071,11 +3071,11 @@
  	 	 	"eng": "helmet"
  	 	},
  	 	"upperArmor": {
- 	 	 	"trans": "Pechera",
+ 	 	 	"trans": "Armadura Superior",
  	 	 	"eng": "upper armor"
  	 	},
  	 	"lowerArmor": {
- 	 	 	"trans": "Pantalones",
+ 	 	 	"trans": "Anrmadura Inferior",
  	 	 	"eng": "lower armor"
  	 	},
  	 	"boots": {
@@ -3140,7 +3140,7 @@
  	 	},
  	 	"techScrap": {
  	 	 	"name": {
- 	 	 	 	"trans": "Tecnobasura",
+ 	 	 	 	"trans": "Chatarra",
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
@@ -3174,13 +3174,13 @@
  	 	},
  	 	"upperArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "Pechera",
+ 	 	 	 	"trans": "Armadura superior",
  	 	 	 	"eng": "upper armor"
  	 	 	}
  	 	},
  	 	"lowerArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "Pantalones",
+ 	 	 	 	"trans": "Armadura Inferior",
  	 	 	 	"eng": "lower armor"
  	 	 	}
  	 	},
