--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -3090,7 +3090,7 @@
  	"item": {
  	 	"aiCore": {
  	 	 	"name": {
- 	 	 	 	"trans": "Hai il core",
+ 	 	 	 	"trans": "Nucleo IA",
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
@@ -4596,11 +4596,11 @@
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[AFK Exp Farm]\r\n        Rilascia un AI per pulire i dungeon per te. Questo userà un AI Core,che si occupa abitualmente di un solo viaggio.",
+ 	 	 	 	"trans": "[AFK Exp Farm]\r\n        Rilascia un AI per pulire i dungeon per te. Questo userà un Nucleo IA,che si occupa abitualmente di un solo viaggio.",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Puoi usare la tua AI Core per auto-farmare nemici mentre sei AFK.",
+ 	 	 	 	"trans": "Puoi usare il tuo Nucleo IA per auto-farmare nemici mentre sei AFK.",
  	 	 	 	"eng": "You can use your AI Core to Auto-Farm enemies while you AFK"
  	 	 	}
  	 	},
