--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -384,7 +384,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "クラフトスキルを上げるとより強力な武器を作成できます.クラフトスキルはキャッシュをプリントすることで上げられます",
+ 	 	 	 	"trans": "クラフトスキルを上げるとより強力な武器を作成できます. クラフトスキルはキャッシュをプリントすることで上げられます",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"quickSlots": {
@@ -549,7 +549,7 @@
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "この項目のコミュニティLoreはまだありません.作成してみませんか？",
+ 	 	 	 	 	"trans": "この項目のコミュニティLoreはまだありません. 作成してみませんか？",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
@@ -581,7 +581,7 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "この装備は壊れています.修理するには装備屋に持っていく必要があります.",
+ 	 	 	 	 	"trans": "この装備は壊れています. 修理するには装備屋に持っていく必要があります.",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -638,7 +638,7 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "これを行うと,アイテムのすべてのキャリブレーションがリセットされ,再度取引が可能になります. \n       続行しますか？",
+ 	 	 	 	 	"trans": "これを行うとアイテムのキャリブレーションが全てリセットされ,再度取引が可能になります. \n       続行しますか？",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
  	 	 	 	"trans": "装備の状態を初期化",
@@ -719,7 +719,7 @@
  	 	},
  	 	"npc": {
  	 	 	"notUnlocked": {
- 	 	 	 	"trans": "これはまだアンロックされていません.キャラクターをレベルアップしてみてください.",
+ 	 	 	 	"trans": "これはまだアンロックされていません. キャラクターをレベルアップしてみてください.",
  	 	 	 	"eng": "This is not unlocked yet, try leveling up your character"
  	 	 	},
  	 	 	"repairItems": {
@@ -739,7 +739,7 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "装備のプリントはあなたのクラフトスキルレベルに基づいています.たくさんのアイテムをプリントし,スキルレベルを上げましょう",
+ 	 	 	 	 	 	"trans": "装備のプリントはあなたのクラフトスキルレベルに基づいています. たくさんのアイテムをプリントし,スキルレベルを上げましょう",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -996,7 +996,7 @@
  	 	 	 	"eng": "Are you sure you want to abort?"
  	 	 	},
  	 	 	"abortWarning": {
- 	 	 	 	"trans": "タスクを強制終了すると報酬を受け取ることができません.また,タスクに使用されたアイテムも返却されません.",
+ 	 	 	 	"trans": "タスクを強制終了すると報酬を受け取ることができません. また,タスクに使用されたアイテムも返却されません.",
  	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	}
  	 	},
@@ -1040,7 +1040,7 @@
  	 	 	 	 	 	"eng": "Breach operation completed"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "リモートエクスプロイトをデプロイしています,お待ちください...",
+ 	 	 	 	 	 	"trans": "リモートエクスプロイトを展開しています,お待ちください...",
  	 	 	 	 	 	"eng": "Remote exploit deploying, please wait..."
  	 	 	 	 	}
  	 	 	 	}
@@ -1104,7 +1104,7 @@
  	 	},
  	 	"setting": {
  	 	 	"langWarning": {
- 	 	 	 	"trans": "この言語パックはオープンソースであり,プレイヤーの皆様からのご協力を得て制作されています.テキストは完全には翻訳されておらず,誤訳があるかもしれません. よければGithubページから自由に編集して貢献してください.",
+ 	 	 	 	"trans": "この言語パックはオープンソースであり,プレイヤーの皆様からのご協力を得て制作されています. テキストは完全には翻訳されておらず,誤訳があるかもしれません. よければGithubページから自由に編集して貢献してください.",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"langGithub": {
@@ -1129,7 +1129,7 @@
  	 	 	 	 	"eng": "Disable Attack Timing Bar"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "攻撃タイミングバーを無効にすると、追加ダメージを与えられません",
+ 	 	 	 	 	"trans": "攻撃タイミングバーを無効にすると,追加ダメージを与えられません",
  	 	 	 	 	"eng": "Disabling attack timing bar will not grant extra damage"
  	 	 	 	}
  	 	 	},
@@ -1147,7 +1147,7 @@
  	 	 	},
  	 	 	"disableSkipRespectNoti": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "スペクトのスキップ通知を無効にします",
+ 	 	 	 	 	"trans": "リスペクトのスキップ通知を無効にします",
  	 	 	 	 	"eng": "Disable Skip Respect Notification"
  	 	 	 	}
  	 	 	},
@@ -1174,7 +1174,7 @@
  	 	 	 	"eng": "Enable Cyberpunk Mode"
  	 	 	},
  	 	 	"uiScale": {
- 	 	 	 	"trans": "UIスケール",
+ 	 	 	 	"trans": "UIサイズ",
  	 	 	 	"eng": "UI Scale",
  	 	 	 	"normal": {
  	 	 	 	 	"trans": "普通",
@@ -1299,7 +1299,7 @@
  	 	 	 	"trans": "最初にいくつか回復アイテムを買っておくことをお勧めします.",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "ダンジョンに入る前にトリノキーマートでアスピリンを購入しましょう.ダンジョンでは戦闘後HPが回復しません.",
+ 	 	 	 	 	"trans": "ダンジョンに入る前にトリノキーマートでアスピリンを購入しましょう. ダンジョンでは戦闘後HPが回復しません.",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1320,18 +1320,18 @@
  	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "購入エンブレム？",
+ 	 	 	 	 	 	"trans": "エンブレムを購入しますか？",
  	 	 	 	 	 	"eng": "Purchase Emblem?"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"selectConfirm": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "エンブレムを選択しますか？",
+ 	 	 	 	 	 	"trans": "エンブレムを選択してください",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"owned": {
- 	 	 	 	 	"trans": "所有する",
+ 	 	 	 	 	"trans": "所有済",
  	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
@@ -1535,7 +1535,7 @@
  	 	},
  	 	"dungeonLobby": {
  	 	 	"showCanJoinOnly": {
- 	 	 	 	"trans": "参加できるダンジョンのみを表示します",
+ 	 	 	 	"trans": "参加できるダンジョンのみを表示する",
  	 	 	 	"eng": "Only show dungeons I can join"
  	 	 	},
  	 	 	"noDungeon": {
@@ -1595,7 +1595,7 @@
  	 	 	 	 	"eng": "Processing"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "ちょっと時間がかかるぜ.しばらく経ってから戻ってきてくんなよ",
+ 	 	 	 	 	"trans": "ちょっと時間がかかるぜ. しばらく経ってから戻ってきてくんなよ",
  	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
@@ -2265,7 +2265,7 @@
  	 	 	 	"eng": "Calibration Safety"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "キャリブレーションに失敗してもアイテムが破壊されない",
+ 	 	 	 	"trans": "キャリブレーションに失敗してもアイテムが破壊されません",
  	 	 	 	"eng": "Calibration fails will not destroy the item"
  	 	 	}
  	 	},
@@ -5384,7 +5384,7 @@
  	 	 	 	"eng": "An update has been installed"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "リロードをクリックして続行してください",
+ 	 	 	 	"trans": "「リロードする」をクリックして続行してください",
  	 	 	 	"eng": "Please click reload to continue"
  	 	 	},
  	 	 	"reloadButton": {
@@ -5418,11 +5418,11 @@
  	 	},
  	 	"message": {
  	 	 	"content1": {
- 	 	 	 	"trans": "こんにち,、親愛なるプレイヤー！",
+ 	 	 	 	"trans": "親愛なるプレイヤーさん,こんにちは！",
  	 	 	 	"eng": "Hello, dear players!"
  	 	 	},
  	 	 	"content2": {
- 	 	 	 	"trans": "私はDexter,Cybercode Onlineの開発者です.",
+ 	 	 	 	"trans": "私はDexter, Cybercode Onlineの開発者です.",
  	 	 	 	"eng": "I am Dexter, the developer of CyberCode Online."
  	 	 	},
  	 	 	"content3": {
