--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -2091,7 +2091,7 @@
  	 	},
  	 	"critChance": {
  	 	 	"name": {
- 	 	 	 	"trans": "Coup critique",
+ 	 	 	 	"trans": "Chance critique",
  	 	 	 	"eng": "Crit chance"
  	 	 	},
  	 	 	"description": {
