Update German Translation
Fixed some small Typos

--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -677,7 +677,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Gegenstand recyclen",
+ 	 	 	 	"trans": "Gegenstand recyceln",
  	 	 	 	"eng": "Recycle Item"
  	 	 	},
  	 	 	"selectAmount": {
@@ -1157,7 +1157,7 @@
  	 	 	 	 	"eng": "Disable Chat Effect"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Deaktiviere, ob die Registerkarte des Chat-Registers während des Sprachts verzögert",
+ 	 	 	 	 	"trans": "Deaktivieren, wenn die Chat-Registerkarte beim Überspringen verzögert wird",
  	 	 	 	 	"eng": "Disable if chat tab lags during skips"
  	 	 	 	}
  	 	 	},
@@ -1299,7 +1299,7 @@
  	 	 	 	"trans": "Ohne Heilungs-Items Fortfahren?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Es scheint, als hättest du kein Pain-Away™ dabei. Kauf dir beim Trinoky Mart in der Stadt etwas Pain-Away™, bevor du einen Dungeon betritst, da du nicht Regenerierst",
+ 	 	 	 	 	"trans": "Es scheint, als hättest du kein Pain-Away™ dabei. Kauf dir beim Trinoky Mart in der Stadt etwas Pain-Away™, bevor du einen Dungeon betrittst, da du nicht Regenerierst",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1375,11 +1375,11 @@
  	 	 	},
  	 	 	"hasRefererCheckbox": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Wichtig, wenn dir das Spiel empfholen wurde (optional)",
+ 	 	 	 	 	"trans": "Nur markieren, wenn dir das Spiel empfohlen wurde (optional)",
  	 	 	 	 	"eng": "Only check if you have a referer (Optional)"
  	 	 	 	},
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Ich wurde Empfohlen ",
+ 	 	 	 	 	"trans": "Es wurde mir empfohlen ",
  	 	 	 	 	"eng": "I have a referer"
  	 	 	 	}
  	 	 	},
@@ -1476,7 +1476,7 @@
  	 	 	 	"eng": "Coupon"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Wenn du einen Gutschein von einem unserer Events hast, kannst du diesen hier einlöen.",
+ 	 	 	 	"trans": "Wenn du einen Gutschein von einem unserer Events hast, kannst du diesen hier einlösen.",
  	 	 	 	"eng": "If you have a coupon from one of our events, you can claim it here."
  	 	 	},
  	 	 	"placeholder": {
@@ -1568,7 +1568,7 @@
  	 	 	 	"eng": "Chance of safe failure"
  	 	 	},
  	 	 	"failureRate": {
- 	 	 	 	"trans": "Warscheinlichkeit eines Systemabsturzes",
+ 	 	 	 	"trans": "Wahrscheinlichkeit eines Systemabsturzes",
  	 	 	 	"eng": "Chance of destructive failure"
  	 	 	},
  	 	 	"notActivated": {
@@ -1632,7 +1632,7 @@
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
- 	 	 	 	"trans": "Telefone von ASUS (Zenfone, ROG) haben derzeit Problme mit dem Menü, welches nicht anklickbar ist, Schalte in diesem Fall den Bildschirm aus und wieder ein (und/oder) Starte die App neu . Dies sollte das Problem beheben :)",
+ 	 	 	 	"trans": "Telefone von ASUS (Zenfone, ROG) haben derzeit Probleme mit dem Menü, welches nicht anklickbar ist, Schalte in diesem Fall den Bildschirm aus und wieder ein (und/oder) Starte die App neu. Dies sollte das Problem beheben :)",
  	 	 	 	"eng": "ASUS phone (Zenfone, ROG) has bug with screen being not clickable, in the case, please try turning your screen off and on again, or put this app to background and resume it again. this should fix the issue :)"
  	 	 	}
  	 	},
@@ -1695,11 +1695,11 @@
  	 	},
  	 	"noPrintableCaches": {
  	 	 	"title": {
- 	 	 	 	"trans": "Ausrüstungs Cache nicht gefunden",
+ 	 	 	 	"trans": "Ausrüstungs-Cache nicht gefunden",
  	 	 	 	"eng": "Equipment Cache not found"
  	 	 	},
  	 	 	"subTitle": {
- 	 	 	 	"trans": "Sammle Caches von Feinden und Dungeons, um dir neuen Waffen und Ausüstungen zu drucken",
+ 	 	 	 	"trans": "Sammle Caches von Feinden und Dungeons, um dir neuen Waffen und Ausrüstungen zu drucken",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
  	 	 	}
  	 	},
@@ -1769,7 +1769,7 @@
  	 	 	"deleteAccount": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Möchtest du dein Konto wirklich löschen? Dies kann nicht Rückgänging gemacht werden. ALLE Kontoinformationen werden entfernt.",
+ 	 	 	 	 	 	"trans": "Möchtest du dein Konto wirklich löschen? Dies kann nicht Rückgängig gemacht werden. ALLE Kontoinformationen werden entfernt.",
  	 	 	 	 	 	"eng": "Are you sure you want to delete your account? This is irreversible, all account information will be removed."
  	 	 	 	 	}
  	 	 	 	}
@@ -1938,7 +1938,7 @@
  	 	 	"eng": "Receives"
  	 	},
  	 	"inputPlaceholder": {
- 	 	 	"trans": "Gib eine Nachricht ein, um mit dem Chaten zu beginnen",
+ 	 	 	"trans": "Gib eine Nachricht ein, um mit dem Chatten zu beginnen",
  	 	 	"eng": "Enter message to start chatting"
  	 	},
  	 	"moderators": {
@@ -2091,7 +2091,7 @@
  	 	},
  	 	"critChance": {
  	 	 	"name": {
- 	 	 	 	"trans": "Krit Chance",
+ 	 	 	 	"trans": "Krit. Chance",
  	 	 	 	"eng": "Crit chance"
  	 	 	},
  	 	 	"description": {
@@ -2101,7 +2101,7 @@
  	 	},
  	 	"critDamage": {
  	 	 	"name": {
- 	 	 	 	"trans": "Krit Schaden",
+ 	 	 	 	"trans": "Krit. Schaden",
  	 	 	 	"eng": "Crit damage"
  	 	 	},
  	 	 	"description": {
@@ -2165,7 +2165,7 @@
  	 	 	 	"eng": "Pocket"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Erhöht die Inventarplatz",
+ 	 	 	 	"trans": "Erhöht den Inventarplatz",
  	 	 	 	"eng": "Increases inventory capacity"
  	 	 	}
  	 	},
@@ -2235,7 +2235,7 @@
  	 	 	 	"eng": "Exp multiplier"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Erhöht prozentual deine erhaltenen Erfahrung",
+ 	 	 	 	"trans": "Erhöht prozentual deine erhaltene Erfahrung",
  	 	 	 	"eng": "Increase EXP you receive"
  	 	 	}
  	 	},
@@ -2287,7 +2287,7 @@
  	 	 	 	"eng": "Animals Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Erhöht den Schaden an Feinden von Tierenanden",
+ 	 	 	 	"trans": "Erhöht den Schaden an Feinden der Tierbande",
  	 	 	 	"eng": "Increases damage to Enemies of Animals gang"
  	 	 	}
  	 	},
@@ -2419,7 +2419,7 @@
  	 	},
  	 	"discardPrompt": {
  	 	 	"title": {
- 	 	 	 	"trans": "Bist du sicher, dass du alles verwerfen möchten?",
+ 	 	 	 	"trans": "Bist du sicher, dass du alles verwerfen möchtest?",
  	 	 	 	"eng": "Are you sure you want to discard?"
  	 	 	},
  	 	 	"confirm": {
@@ -2580,7 +2580,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "Du erhälst EXP, Bitcoin und Beute, wenn du Feinde besiegst, \n                 es ist einen Versuch wert!",
+ 	 	 	"trans": "Du erhältst EXP, Bitcoin und Beute, wenn du Feinde besiegst, \n                 es ist einen Versuch wert!",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\r\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -2588,7 +2588,7 @@
  	 	 	"eng": "Click here to attack the enemy"
  	 	},
  	 	"statusInv": {
- 	 	 	"trans": "Klicke auf \"Alles nehmen\", um die gesammte Beute zu erhalten",
+ 	 	 	"trans": "Klicke auf \"Alles nehmen\", um die gesamte Beute zu erhalten",
  	 	 	"eng": "Click 'TAKE ALL' to get all the loots"
  	 	},
  	 	"dungeonQuest": {
@@ -2756,7 +2756,7 @@
  	 	},
  	 	"paypal": {
  	 	 	"paypalBonusTitle": {
- 	 	 	 	"trans": "Alle Paypal-Käufer erhalten zusätzlich 10% mehr Units!, du kannst Paypal nur in der Web-Version verwenden. Logge dich dazu einfach mit deinem Browser ein",
+ 	 	 	 	"trans": "Alle Paypal-Käufer erhalten zusätzlich 10% mehr Units! Du kannst Paypal nur in der Web-Version verwenden. Logge dich dazu einfach mit deinem Browser ein",
  	 	 	 	"eng": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser."
  	 	 	},
  	 	 	"paypalBonus": {
@@ -2943,7 +2943,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Werden eine Cyber-Kartoffel",
+ 	 	 	 	 	"trans": "Werde eine Cyber-Kartoffel",
  	 	 	 	 	"eng": "Become a Cybernetic Potato"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3114,7 +3114,7 @@
  	 	 	 	"eng": "Anti Matter Charge"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Hightech, verkleineter, Einweg-Anti-Materie-Energiegenerator. \r\n        Dieser Gegenstand erzeugt enorme Energiemengen und kann als Munition für Spezialwaffen benutzt werden. ",
+ 	 	 	 	"trans": "Hightech, verkleinerter, Einweg-Anti-Materie-Energiegenerator. \r\n        Dieser Gegenstand erzeugt enorme Energiemengen und kann als Munition für Spezialwaffen benutzt werden. ",
  	 	 	 	"eng": "High-tech, miniaturized, one-time use, antimatter energy generator. \r\n        This item produces enormous amounts of power. You can use this as ammunition for your destructive weapon. "
  	 	 	}
  	 	},
@@ -3378,7 +3378,7 @@
  	 	},
  	 	"healingArea9": {
  	 	 	"name": {
- 	 	 	 	"trans": "Legendärer Nano Medizin Drone",
+ 	 	 	 	"trans": "Legendäre Nano-Medizin-Drohne",
  	 	 	 	"eng": "Legendary Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -3388,7 +3388,7 @@
  	 	},
  	 	"healingArea10": {
  	 	 	"name": {
- 	 	 	 	"trans": "Epische Nano Medizin-Drone",
+ 	 	 	 	"trans": "Epische Nano-Medizin-Drohne",
  	 	 	 	"eng": "Epic Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -3402,7 +3402,7 @@
  	 	 	 	"eng": "Medical Tech Parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Teile von gebrauchter medizinischer Technologie, die (mit dem benötigtem Wissen) zur Herstellung von Heilgegenständen verwendet werden kann",
+ 	 	 	 	"trans": "Teile von gebrauchter medizinischer Technologie, die (mit dem benötigten Wissen) zur Herstellung von Heilgegenständen verwendet werden kann",
  	 	 	 	"eng": "Bits and pieces of used medical tech. This can be used to craft healing items if you understand how"
  	 	 	}
  	 	},
@@ -3639,7 +3639,7 @@
  	 	 	 	"eng": "Explorer's Backpack"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Ein alter lilafarbener 'Explorer'-Rucksack im Kindergarten-Look, auf dem Namensschild steht \"Dora\" (warscheinlich der Vorbesitzer) , du siehst fabelhaft aus, wenn du ihn trägst\r\n        Vergrößert den Inventarplatz, wenn ausgerüstet",
+ 	 	 	 	"trans": "Ein alter lilafarbener 'Explorer'-Rucksack im Kindergarten-Look, auf dem Namensschild steht \"Dora\" (wahrscheinlich der Vorbesitzer), du siehst fabelhaft aus, wenn du ihn trägst\r\n        Vergrößert den Inventarplatz, wenn ausgerüstet",
  	 	 	 	"eng": "An old Kindergarten looking Purple 'Explorer' Backpack, it has a name tag with the previous owner's name \"Dora\" written on it, you look fabulous wearing it.\r\n        increase inventory space when equipped"
  	 	 	}
  	 	},
@@ -3765,7 +3765,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "Ein Splitter, der Exploits benutzt, um die Dropchance hochrangiger Gegenstände zu erhöhen. Bietet zusätzliche Dropchance von legendären (${legendaryChance}%) und episch (${epicChance}%) Gegenständen, wenn legendäre Container freigeschaltet werden (nicht stapelbar) für ${time} Minute.(Glorbaler Vorteil) * ACHTUNG: Der Effekt gilt nur, wenn der Splitter aktiviert wird bevor ein Entriegelungsprozess gestartet wird *",
+ 	 	 	 	"trans": "Ein Splitter, der Exploits benutzt, um die Dropchance hochrangiger Gegenstände zu erhöhen. Bietet zusätzliche Dropchance von legendären (${legendaryChance}%) und episch (${epicChance}%) Gegenständen, wenn legendäre Container freigeschaltet werden (nicht stapelbar) für ${time} Minute.(Globaler Vorteil) * ACHTUNG: Der Effekt gilt nur, wenn der Splitter aktiviert wird bevor ein Entriegelungsprozess gestartet wird *",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
@@ -4233,7 +4233,7 @@
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Ein familiengeführtes Handelsgeschäft, in dem du mit dem handeln kannst, was du beim Plündern gefunden hast.",
+ 	 	 	 	"trans": "Ein familiengeführtes Handelsgeschäft, indem du mit dem handeln kannst, was du beim Plündern gefunden hast.",
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
@@ -4829,7 +4829,7 @@
  	 	"ui": {
  	 	 	"useItem": {
  	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Du kanst diesen Gegenstand während eines Straßenkämpf nicht verwenden, Gegenstände sind nur in Dungeons verfügbar",
+ 	 	 	 	 	"trans": "Du kannst diesen Gegenstand während eines Straßenkämpf nicht verwenden, Gegenstände sind nur in Dungeons verfügbar",
  	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
  	 	 	 	}
  	 	 	},
@@ -4933,7 +4933,7 @@
  	 	 	"eng": "of Healing"
  	 	},
  	 	"criticalDamageWeapon": {
- 	 	 	"trans": "des Kritischenschadens",
+ 	 	 	"trans": "des kritischen Schadens",
  	 	 	"eng": "of Crit Damage"
  	 	},
  	 	"upgradeHealth": {
@@ -4949,7 +4949,7 @@
  	 	 	"eng": "of Shield"
  	 	},
  	 	"upgradeSneaky": {
- 	 	 	"trans": "des schleichens",
+ 	 	 	"trans": "des Schleichens",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
@@ -4961,7 +4961,7 @@
  	 	 	"eng": "of Stun"
  	 	},
  	 	"upgradeCriticalChance": {
- 	 	 	"trans": "der kritisch Trefferchance",
+ 	 	 	"trans": "der kritischen Trefferchance",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"upgradeCriticalDamage": {
@@ -5168,7 +5168,7 @@
  	 	},
  	 	"chatRuleModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "Bitte stimme den folgenden Regeln zu, bevor du mit dem Chaten beginnst",
+ 	 	 	 	"trans": "Bitte stimme den folgenden Regeln zu, bevor du mit dem Chatten beginnst",
  	 	 	 	"eng": "Please agree to the rules below before start chatting"
  	 	 	},
  	 	 	"rule1": {
@@ -5184,7 +5184,7 @@
  	 	 	 	"eng": "No inappropriate language."
  	 	 	},
  	 	 	"footer": {
- 	 	 	 	"trans": "Bei einem Regenlverstoß wirst du vom Chat ausgeschlossen",
+ 	 	 	 	"trans": "Bei einem Regelverstoß wirst du vom Chat ausgeschlossen",
  	 	 	 	"eng": "You will be MUTED if you breach any of the rules"
  	 	 	},
  	 	 	"footer2": {
@@ -5246,7 +5246,7 @@
  	 	},
  	 	"languagePrompt": {
  	 	 	"title": {
- 	 	 	 	"trans": "Unoffizielle Übersetzung",
+ 	 	 	 	"trans": "Inoffizielle Übersetzung",
  	 	 	 	"eng": "Unofficial translation"
  	 	 	},
  	 	 	"description1": {
@@ -5339,7 +5339,7 @@
  	 	 	},
  	 	 	"goodReview": {
  	 	 	 	"title1": {
- 	 	 	 	 	"trans": "Wow, vielen Dank! Ich fühle mich geehrt, bitte mache es offiziell, indem du dies auf unserer (Google Play,App-Store) Seite hinterlässt :)",
+ 	 	 	 	 	"trans": "Wow, vielen Dank! Ich fühle mich geehrt, bitte mache es offiziell, indem du dies auf unserer (Google Play App-Store) Seite hinterlässt :)",
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
@@ -5373,7 +5373,7 @@
  	 	 	},
  	 	 	"closeButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Schliesen",
+ 	 	 	 	 	"trans": "Schliessen",
  	 	 	 	 	"eng": "Close"
  	 	 	 	}
  	 	 	}
@@ -5430,7 +5430,7 @@
  	 	 	 	"eng": "If you have some spare change it would be very helpful if you could donate to help with continued support and development of the game."
  	 	 	},
  	 	 	"content4": {
- 	 	 	 	"trans": "Bitte Spende nur,wenn du dich dabei wohlfühlst, Alle Leistungen sind so konzipiert, dass sie für jeden Spieler fair sind und keinen Vorteil verschaffen.",
+ 	 	 	 	"trans": "Bitte Spende nur, wenn du dich dabei wohlfühlst, Alle Leistungen sind so konzipiert, dass sie für jeden Spieler fair sind und keinen Vorteil verschaffen.",
  	 	 	 	"eng": "Please only donate if you are comfortable, all benefits are designed to be fair for all players and will not give an edge in gameplay."
  	 	 	}
  	 	},
